Refactors test packages and adds JMH benchmarks.